rtest/tests/jsr335/Semantics/LambdaExpressions/EffectivelyFinal/ShouldFail/non-init-variable01/Test.java
// .result=COMPILE_FAIL


public class Test {
	public interface TestInterface {
		public int functMethod(); 
	}
	
	public static void main(String[] args) {
		int a;
		TestInterface t = () -> a;
    }
	
}